[package]
name = "pong"
version = "0.1.0"
authors = ["Michael Bausano <bausanomichal@gmail.com>"]
edition = "2018"
exclude = ["docs/**/*"]
publish = false

description = "Multiplayer pong controlled with fingers and visualized by a projector."
readme = "README.md"

[dependencies]
ggez = "0.5.1"
nalgebra = "0.17"
ncollide2d = "0.18"
nphysics2d = "0.10"
rscam = "0.5.5"
rand = "0.7"
